--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:17.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.orhanobut:hawk:2.0.1'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 }
