--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,17 +43,16 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.media:media:1.1.0-beta01'
-    implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0-beta01'
+    implementation 'androidx.media:media:1.1.0-beta02'
+    implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0-beta02'
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     implementation 'com.google.android.gms:play-services-ads:17.2.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
-    implementation 'com.orhanobut:hawk:2.0.1'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
